# idesk-morfa

./: CMakeLists.txt  README.md  application.cpp  application.h  desktop.cpp  desktop.h  item.cpp  item.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  util.cpp  util.h
